# CPU-Checker

./: CMakeLists.txt  README.md  database.cpp
include/: binaryBackup.hpp  bufferData.hpp  cpuLoad.hpp  dataAnalysis.hpp  dataToJson.hpp  database.hpp  fileCheck.hpp  fileHandling.hpp  interrupt.hpp  performanceLoad.hpp  sortData.hpp  validation.hpp
src/: SeachNoPragma.cpp  SeachWithPragma.cpp  binaryConvert.cpp  bufferData.cpp  client.cpp  cpuLoad.cpp  create-date-folder.cpp  dataAnalysis.cpp  database.cpp  fileCheck.cpp  fileHandling.cpp  interrupt.cpp  performanceLoad.cpp  readBinaryFile.cpp  searchFiles.cpp  server.cpp  sortData.cpp  validation.cpp
testJson/: data[10-45-30].json  data[11-45-30].json  data[12-45-30].json
